add user roles, add auth tests. API completed
